--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <li>2014-04-17   v0.2.0   Added dynamic column generation</li>
 <li>2014-04-17   v0.1.1   Updated Grunt config</li>
 <li>2014-04-16   v0.1.0   Initial commit</li>
-</ul><hr><p>Inspired by the great <a href="mailto://hello@matejsvajger.com/">Skeleton grid</a> and the <a href="http://gridpak.com/">Gridpak</a> online grid generator</p>
+</ul><hr><p>Inspired by the great <a href="http://www.getskeleton.com/">Skeleton grid</a> and the <a href="http://gridpak.com/">Gridpak</a> online grid generator</p>
 
 <p><em><a href="http://i0.kym-cdn.com/photos/images/newsfeed/000/581/296/c09.jpg">LESS Grid, MUCH Responsive!</a></em></p>
       </section>
