--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
     <title>Less-grid by matejsvajger</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Less-grid</h1>
-        <p class="header">Responsive Grid in LESS CSS</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/matejsvajger/less-grid/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/matejsvajger/less-grid/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/matejsvajger/less-grid">View On GitHub</a></li>
-        </ul>
+    <header>
+      <div class="container">
+        <h1>Less-grid</h1>
+        <h2>Responsive Grid in LESS CSS</h2>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/matejsvajger">matejsvajger</a></p>
+        <section id="downloads">
+          <a href="https://github.com/matejsvajger/less-grid/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/matejsvajger/less-grid/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/matejsvajger/less-grid" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-
-      </header>
-      <section>
+    <div class="container">
+      <section id="main_content">
         <h1>
-<a name="less-grid-100" class="anchor" href="#less-grid-100"><span class="octicon octicon-link"></span></a>less-grid 1.0.0</h1>
+<a name="less-grid-110" class="anchor" href="#less-grid-110"><span class="octicon octicon-link"></span></a>less-grid 1.1.0</h1>
 
 <blockquote>
 <p>Responsive dynamic grid generator with fluid or fixed breakpoints</p>
@@ -64,7 +62,7 @@
 
 <p>Type: <code>px</code> <code>%</code></p>
 
-<p>Default: 1200px.</p>
+<p>Default: 960px.</p>
 
 <p>Specifies row width which will contain columns. Can be set in pixels or percentage.</p>
 
@@ -75,7 +73,7 @@
 
 <p>Type: <code>Int</code></p>
 
-<p>Default: <code>12</code></p>
+<p>Default: <code>16</code></p>
 
 <p>Number of columns your grid will use. This will generate <code>.span_[1-n]</code> classes where <code>n</code> represents <code>@max_columns</code> </p>
 
@@ -85,7 +83,7 @@
 
 <p>Type: <code>px</code> <code>%</code></p>
 
-<p>Default: <code>4px</code></p>
+<p>Default: <code>0%</code></p>
 
 <p>Defines the margin between the inner columns. Outermost borders remain intact.</p>
 
@@ -95,7 +93,7 @@
 
 <p>Type: <code>px</code> <code>%</code></p>
 
-<p>Default: <code>0px</code></p>
+<p>Default: <code>0px 10px</code></p>
 
 <p>Defines the column padding; </p>
 
@@ -120,45 +118,82 @@
 <h4>
 <a name="row" class="anchor" href="#row"><span class="octicon octicon-link"></span></a>.row</h4>
 
-<p>Holder and positioner of our columns. Always use for wrapping <code>.columns</code>, but do not stack <code>.row</code> inside each other.</p>
+<p>Holder and positioner of our columns. Always use for wrapping <code>.columns</code>. Nested <code>.row</code>s width changes to 100% and they remove the padding and margin on outermost columns.</p>
 
 <h4>
 <a name="column-columns" class="anchor" href="#column-columns"><span class="octicon octicon-link"></span></a>.column, .columns</h4>
 
-<p>Common settings for all columns. Always used in conjunction with <code>.span_[1-n]</code> classes.</p>
+<p>Common settings for all columns. Always used in conjunction with <code>.span[1-n]</code> classes.</p>
 
 <h4>
-<a name="span_1-n" class="anchor" href="#span_1-n"><span class="octicon octicon-link"></span></a>.span_[1-n]</h4>
+<a name="span1-n" class="anchor" href="#span1-n"><span class="octicon octicon-link"></span></a>.span[1-n]</h4>
 
 <p>Dynamicaly generated spans based on grid settings. Defining width, padding and gutter on columns.</p>
 
 <h4>
-<a name="span_half-span_qtr-span_one_third-span_two_thirds" class="anchor" href="#span_half-span_qtr-span_one_third-span_two_thirds"><span class="octicon octicon-link"></span></a>.span_half, .span_qtr, .span_one_third, .span_two_thirds</h4>
+<a name="push1-n-pull1-n" class="anchor" href="#push1-n-pull1-n"><span class="octicon octicon-link"></span></a>.push[1-n], .pull[1-n]</h4>
 
-<p>This special spans are for times, when <code>@max_columns</code> is not devidable by number 2 or 3 and you wish to have a column span half, one quarter, one third or two thirds of the row width.</p>
+<p>Dynamicaly generated classes for column offsets. <code>.push[1-n]</code> offsets columns to the right and <code>.pull[1-n]</code> offsets them to the left.</p>
 
-<p>On screen sizes with width lower than 768px all the columns switch to rows. However the <code>.span_qtr</code> switches to two column width and <code>.span_half</code> remains all down to widths  480px.</p>
-
-<h3>
-<a name="usage-examples" class="anchor" href="#usage-examples"><span class="octicon octicon-link"></span></a>Usage Examples</h3>
-
-<p>Let's say we have a 16 column grid and we want four equal columns (16/4=4) -&gt; span_4:</p>
+<p>Imagine you have a sidebar on the left side:</p>
 
 <div class="highlight highlight-html"><pre><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"row"</span><span class="nt">&gt;</span>
-    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span_4 columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
-    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span_4 columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
-    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span_4 columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
-    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span_4 columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"sidebar"</span> <span class="na">class=</span><span class="s">"span4  columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"content"</span> <span class="na">class=</span><span class="s">"span12 columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
+<span class="nt">&lt;/div&gt;</span>
+</pre></div>
+
+<p>This will put the sidebar ontop of content on mobile views, but in a lot of cases you'd prefer the content on top. No problem! Just switch the order and push the columns in the right place:</p>
+
+<div class="highlight highlight-html"><pre><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"row"</span><span class="nt">&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"content"</span> <span class="na">class=</span><span class="s">"span12 columns pull4"</span><span class="nt">&gt;&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"sidebar"</span> <span class="na">class=</span><span class="s">"span4  columns push12"</span><span class="nt">&gt;&lt;/div&gt;</span>
+<span class="nt">&lt;/div&gt;</span>
+
+
+#### .half, .qtr, .one-third, .two-thirds
+
+This special spans are for times, when `@max_columns` is not dividable by number 2 or 3 and you wish to have a column span half, one quarter, one third or two thirds of the row width.
+
+On screen sizes with width lower than 768px all the columns switch to rows. However the `.qtr` switches to two column width and `.half` remains all down to widths  480px.
+
+### Usage Examples
+
+Let's say we have a 16 column grid and we want four equal columns (16/4=4) -&gt; span4:
+```html
+<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"row"</span><span class="nt">&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span4 columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span4 columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span4 columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span4 columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span>
 </pre></div>
 
 <p>However if we wish to have a better responsive layout the following markup will generate exactely the same result, but on mobile devices in landscape mode we'll still have two column layout:</p>
 
 <div class="highlight highlight-html"><pre><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"row"</span><span class="nt">&gt;</span>
-    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span_qtr columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
-    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span_qtr columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
-    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span_qtr columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
-    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"span_qtr columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"qtr columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"qtr columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"qtr columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"qtr columns"</span><span class="nt">&gt;&lt;/div&gt;</span>
+<span class="nt">&lt;/div&gt;</span>
+</pre></div>
+
+<h4>
+<a name="new-feature-omitcolumns" class="anchor" href="#new-feature-omitcolumns"><span class="octicon octicon-link"></span></a>New feature: <em>@omitColumns</em>
+</h4>
+
+<p>All the dynamicaly generated class names were moved into variables. If you'd like to further simplify the markup the <code>@omitColumns</code> boolean will extend all the dynamic classes with <code>.columns</code> class and you get rid of the need to include it in the markup.</p>
+
+<p>Go ahead and tailor your grid to your liking! e.g.:
+<code>@column_prefix: u</code> (u as in units instead of span)
+<code>@omitColumns: true</code></p>
+
+<p>And you'll get a new markup:</p>
+
+<div class="highlight highlight-html"><pre><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"row"</span><span class="nt">&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"u4"</span><span class="nt">&gt;&lt;/div&gt;</span>
+    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"u12"</span><span class="nt">&gt;&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span>
 </pre></div>
 
@@ -166,20 +201,41 @@
 <a name="release-history" class="anchor" href="#release-history"><span class="octicon octicon-link"></span></a>Release History</h2>
 
 <ul>
-<li>2014-04-30   v1.0.0   First release</li>
+<li>2014-06-21       v1.1.0<br><ul>
+<li>Added new features:
+
+<ul>
+<li>nested rows</li>
+<li>push/pull classes</li>
+<li>option to omit .columns class</li>
+</ul>
+</li>
+<li>Optimized CSS output for smaller footprint</li>
+<li>Updated classnames for simplicity * 2014-04-30   v1.0.0   First release</li>
+</ul>
+</li>
 <li>2014-04-23   v0.3.0   Added mobile support</li>
 <li>2014-04-17   v0.2.0   Added dynamic column generation</li>
 <li>2014-04-17   v0.1.1   Updated Grunt config</li>
-<li>2014-04-16   v0.1.0   Initial commit</li>
-</ul><hr><p>Inspired by the great <a href="http://www.getskeleton.com/">Skeleton grid</a> and the <a href="http://gridpak.com/">Gridpak</a> online grid generator</p>
+</ul><h2>
+<a name="--2014-04-16v010initial-commit" class="anchor" href="#--2014-04-16v010initial-commit"><span class="octicon octicon-link"></span></a> * 2014-04-16   v0.1.0   Initial commit</h2>
+
+<p>Task submitted by <a href="mailto://hello@matejsvajger.com/">Matej Svajger</a></p>
 
 <p><em><a href="http://i0.kym-cdn.com/photos/images/newsfeed/000/581/296/c09.jpg">LESS Grid, MUCH Responsive!</a></em></p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-37152555-2");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
